# DDSL

./: .gitignore  CMakeLists.txt  Doxyfile.in  INSTALL.txt  _TODO.txt  install_python_deps.sh  main.cpp  stdafx.h
DDSL_NO_EXT_LIB/: main.cpp
DDSL_TESTER/: main.cpp
Experiments/: regression_test.cpp  traverser_update.txt
Experiments/Leafs/: main_CaffeMLP.cpp  main_selectSet_NB_SVM.cpp
contrib/caffe_patch/: CaffeTargets.cmake  patch.bat  solver_factory.cpp
contrib/caffe_patch_win/: layer_factory.cpp
contrib/zlib-1.2.8/: zlib.lib  zlibd.lib
ddsl/: main.cpp
ddsl_chaiscript/: DS_Chai.cpp  DS_Chai.h  DS_ChaiMatrix.cpp  DS_ChaiMatrix.h  DS_ChaiTable.cpp  DS_ChaiTable.h  main.cpp
ddsl_python_tester/: cnpy.cpp  file.npy  main.cpp  setup.py
ddsl_tester/: main.cpp
doc/: DDSL.html  cmakeit.codeblocks.example.sh
libarrayfire_ddsl/: ArrayFireDDSL.cpp  ArrayFire_ddsl.cpp  ArrayFire_ddsl.h  CMakeLists.txt
libcaffe_ddsl/: CMakeLists.txt  force_link.cpp
libpng_ddsl/: CMakeLists.txt  pngDDSL.c  pngDDSL.h  png_ddsl.c
src/: CMakeLists.txt  ddsl.h  ddsl.hpp
src/cpp/: DS_Types.cpp  DS_Util.cpp
src/cpp/lang/: DS_MatrixLang.cpp  DS_ModelLang.cpp  DS_TableLang.cpp
src/cpp/lib/: DS_Matrix.cpp  DS_MatrixFunc.cpp  DS_Table.cpp  DS_TableFunc.cpp
src/cpp/model/: DS_Classify.cpp  DS_Classify_Caffe.cpp  DS_Classify_SVM.cpp  DS_Evaluate.cpp  DS_Generate.cpp  DS_Model.cpp  DS_Read.cpp  DS_Transform.cpp  DS_Write.cpp
src/h/: DS_Types.h  DS_Util.h
src/h/lang/: DS_MatrixLang.h  DS_ModelLang.h  DS_TableLang.h
src/h/lib/: DS_Evolution.h  DS_ImageFunc.h  DS_Image_PNG.h  DS_Matrix.h  DS_MatrixFunc.h  DS_MatrixFunc_AF.h  DS_Sampler.h  DS_Table.h  DS_TableFunc.h
src/h/model/: .DS_Classify_Caffe.h.swp  DS_Classify.h  DS_Classify_AF.h  DS_Classify_Caffe.h  DS_Classify_SVM.h  DS_Evaluate.h  DS_Generate.h  DS_Image.h  DS_Model.h  DS_Read.h  DS_Transform.h  DS_Transform_AF.h  DS_Write.h
src/hpp/: DS_Types.hpp  DS_Util.hpp
src/hpp/lang/: DS_MatrixLang.hpp  DS_ModelLang.hpp  DS_TableLang.hpp
src/hpp/lib/: DS_Evolution.hpp  DS_Image.hpp  DS_ImageFunc.hpp  DS_Image_PNG.hpp  DS_Matrix.hpp  DS_MatrixFunc.hpp  DS_MatrixFunc_AF.hpp  DS_Sampler.hpp  DS_Table.hpp  DS_TableFunc.hpp
src/hpp/model/: .DS_Classify_Caffe.hpp.swp  DS_Classify.hpp  DS_Classify_AF.hpp  DS_Classify_Caffe.hpp  DS_Classify_Caffe.hpp.save  DS_Classify_Caffe.hpp.save.1  DS_Classify_SVM.hpp  DS_Evaluate.hpp  DS_Generate.hpp  DS_Image.hpp  DS_Model.hpp  DS_Read.hpp  DS_Transform.hpp  DS_Transform_AF.hpp  DS_Write.hpp
